Added site metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>Level Editor</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.0/underscore-min.js"></script>
+        
+        <meta content="Web Candy Crush Level Editor" property="og:title">
+        <meta content="Level editor for candy crush that can be used to export levels in your browser" property="og:description">
+        <meta content="Candy Crush Level Editor" property="og:site_name">
     </head>
 
     <body>
