--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <script src="script.js" defer></script>
 
-        <img src="backgrounds/w1_bg.webp" id="background" draggable="false"></img>
+        <img src="backgrounds/w1_bg.png" id="background" draggable="false"></img>
 
         <div id="main">
             <div class="sideselectionright">
