Force browsers not to cache page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta content="Web Candy Crush Level Editor" property="og:title">
         <meta content="Level editor for candy crush that can be used to export levels in your browser" property="og:description">
         <meta content="Candy Crush Level Editor" property="og:site_name">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
     </head>
 
     <body>
