--- a/index.html
+++ b/index.html
@@ -236,11 +236,16 @@
                           </div>
                     </button>
                     <div class="dropped" id="locks" style="display:none">
-                        <div class="selectelement" element="licorice" gamelayer="overlay_blocker"></div>
-                        <div class="selectelement" element="marmalade" gamelayer="overlay_blocker"></div>
+                        <div class="selectelement" element="licorice" gamelayer="lock"></div>
+                        <div class="selectelement" element="marmalade" gamelayer="lock"></div>
                         <div class="selectelement" element="sugarcoat_1" gamelayer="sugarcoat"></div>
                         <div class="selectelement" element="sugarcoat_2" gamelayer="sugarcoat"></div>
                         <div class="selectelement" element="sugarcoat_3" gamelayer="sugarcoat"></div>
+                        <div class="selectelement" element="mulock1" gamelayer="lock"></div>
+                        <div class="selectelement" element="mulock2" gamelayer="lock"></div>
+                        <div class="selectelement" element="mulock3" gamelayer="lock"></div>
+                        <div class="selectelement" element="mulock4" gamelayer="lock"></div>
+                        <div class="selectelement" element="mulock5" gamelayer="lock"></div>
                     </div>
 
                     <button class="dropdown" onclick="toggleDropdown(this)" associd="spawning">
