Added licorice fences

--- a/index.html
+++ b/index.html
@@ -308,6 +308,18 @@
                         <button onclick="updateSelection(this, 'wall_right', 'wallright')" class="">
                             <img class="selectionimage" src="elements/wall_right_ui.png">
                         </button>
+                        <button onclick="updateSelection(this, 'licorice_wall_down', 'walldown')" class="">
+                            <img class="selectionimage" src="elements/licorice_wall_down_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'licorice_wall_up', 'wallup')" class="">
+                            <img class="selectionimage" src="elements/licorice_wall_up_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'licorice_wall_left', 'wallleft')" class="">
+                            <img class="selectionimage" src="elements/licorice_wall_left_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'licorice_wall_right', 'wallright')" class="">
+                            <img class="selectionimage" src="elements/licorice_wall_right_ui.png">
+                        </button>
                     </div>
                 </div>
             </div>
