Added bonbon elements

--- a/index.html
+++ b/index.html
@@ -206,11 +206,6 @@
                           </div>
                     </button>
                     <div class="dropped" id="blockers" style="display:none">
-                        <div class="selectelement" element="chocolate" gamelayer="normal"></div>
-                        <div class="selectelement" element="licorice_square" gamelayer="normal"></div>
-                        <div class="selectelement" element="glass_tile_1" gamelayer="glass"></div>
-                        <div class="selectelement" element="glass_tile_2" gamelayer="glass"></div>
-                        <div class="selectelement" element="glass_tile_3" gamelayer="glass"></div>
                         <div class="selectelement" element="block_multi_frosting1" gamelayer="normal"></div>
                         <div class="selectelement" element="block_multi_frosting2" gamelayer="normal"></div>
                         <div class="selectelement" element="block_multi_frosting3" gamelayer="normal"></div>
@@ -236,6 +231,8 @@
                         <div class="selectelement" element="dark_chocolate_3" gamelayer="normal"></div>
                         <div class="selectelement" element="dark_chocolate_4" gamelayer="normal"></div>
                         <div class="selectelement" element="dark_chocolate_5" gamelayer="normal"></div>
+                        <div class="selectelement" element="chocolate" gamelayer="normal"></div>
+                        <div class="selectelement" element="licorice_square" gamelayer="normal"></div>
                         <div class="selectelement" element="shell_1" gamelayer="normal"></div>
                         <div class="selectelement" element="shell_2" gamelayer="normal"></div>
                         <div class="selectelement" element="shell_3" gamelayer="normal"></div>
@@ -260,6 +257,18 @@
                         <div class="selectelement" element="mulock3" gamelayer="lock"></div>
                         <div class="selectelement" element="mulock4" gamelayer="lock"></div>
                         <div class="selectelement" element="mulock5" gamelayer="lock"></div>
+                    </div>
+
+                    <button class="dropdown" onclick="toggleDropdown(this)" associd="shields">
+                        <div style="display: flex; justify-content: space-between;">
+                            <p class='MergePro' style="padding-left: 5%; ">Shields</p>
+                            <p class="arrow" style="display: inline; padding-right: 5%; transform: rotate(90deg);">&raquo</p>
+                          </div>
+                    </button>
+                    <div class="dropped" id="shields" style="display:none">
+                        <div class="selectelement" element="glass_tile_1" gamelayer="glass"></div>
+                        <div class="selectelement" element="glass_tile_2" gamelayer="glass"></div>
+                        <div class="selectelement" element="glass_tile_3" gamelayer="glass"></div>
                     </div>
 
                     <button class="dropdown" onclick="toggleDropdown(this)" associd="spawning">
@@ -329,6 +338,36 @@
                         <button onclick="updateSelection(this, 'licorice_wall_right', 'wallright')" class="">
                             <img class="selectionimage" src="elements/licorice_wall_right_ui.png">
                         </button>
+                    </div>
+
+                    <button class="dropdown" onclick="toggleDropdown(this)" associd="bonbon">
+                        <div style="display: flex; justify-content: space-between;">
+                            <p class='MergePro' style="padding-left: 5%; ">Bon Bon Blitz</p>
+                            <p class="arrow" style="display: inline; padding-right: 5%; transform: rotate(90deg);">&raquo</p>
+                          </div>
+                    </button>
+                    <div class="dropped" id="bonbon" style="display:none">
+                        <div class="selectelement" element="bonbon_colorbomb_1" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_colorbomb_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_colorbomb_3" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_colorbomb_4" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_horizontal_1" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_horizontal_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_horizontal_3" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_horizontal_4" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_vertical_1" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_vertical_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_vertical_3" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_vertical_4" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_fish_1" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_fish_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_fish_3" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_fish_4" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_wrapped_1" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_wrapped_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_wrapped_3" gamelayer="normal"></div>
+                        <div class="selectelement" element="bonbon_wrapped_4" gamelayer="normal"></div>
+                        
                     </div>
                 </div>
             </div>
