--- a/index.html
+++ b/index.html
@@ -326,6 +326,22 @@
                         <button onclick="updateSelection(this, 'wall_right', 'wallright')" class="">
                             <img class="selectionimage" src="elements/wall_right_ui.png">
                         </button>
+
+
+                        <button onclick="updateSelection(this, 'destructible_wall_1_down', 'walldown')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_1_down_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_1_up', 'wallup')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_1_up_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_1_left', 'wallleft')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_1_left_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_1_right', 'wallright')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_1_right_ui.png">
+                        </button>
+                        
+
                         <button onclick="updateSelection(this, 'licorice_wall_down', 'walldown')" class="">
                             <img class="selectionimage" src="elements/licorice_wall_down_ui.png">
                         </button>
