--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
         <img src="backgrounds/w1_bg.png" id="background" draggable="false"></img>
 
         <div id="main">
+            <div class="navbar">
+                <div style="display: flex; height: 100%;">
+                    <div class="navbarflex">
+                    </div>
+                    <div class="navbarflex">
+                    </div>
+                    <div class="navbarflex">
+                        <button style="margin: auto; display: block;" onclick="window.open('https://candy-test.theblakiemon.repl.co?map=' + JSON.stringify(exportLevel()), '_blank')">▶ Play Level</button>
+                        <button style="margin: auto; display: block;" onclick="exportLevelUI()">⏏ Export Level</button>
+                        <button style="margin: auto; display: block;" onclick="displayImportLevelUI()"><small>⤵</small> Import Level</button>
+                    </div>
+                </div>
+            </div>
             <div class="sideselectionright">
                 <div class="sidetitle">
                     <p class='MergePro' style="font-weight: bold; color: white; text-align: center;">Level:</p>
                 </div>
-                <div class="sideoptions">
-                    <!-- <p class='DroidSans break' style="margin: auto; display: block; color: white; text-align: center;">Data</p> -->
-                    <button style="margin: auto; display: block;" onclick="exportLevelUI()">Export Level</button>
-                    <button style="margin: auto; display: block;" disabled>Import Level</button>
-                </div>
-                <div class="sideoptions">
+                <div class="sideoptions" id="modeselection">
                     <p for="moves" class='DroidSans break' style="margin: 10px; display: block; color: white; text-align: center;">Level Type:</p>
                     <label for="movesoption" class="leveltypelabel" style="margin: 5px;" onclick="selectMode()">
                         <img src="ui/playmode_icon_moves.png" style="max-width: 30px; max-height: 30px;">
@@ -71,7 +79,7 @@
                     <label for="time" class='DroidSans' style="margin: 10px; display: block; color: white; text-align: center;">Time (seconds):</label>
                     <input style="width: 50px; text-align: center;" placeholder="30" type="number" name="moves" id="time" name="time"><br>
                 </div>
-                <div class="sideoptions">
+                <div class="sideoptions" id="colorspref-section">
                     <p class='DroidSans break' style="margin: auto; display: block; color: white; text-align: center;">Preferred Colors:</p>
                     <button value="0" class="preferred preferredselected" onclick="togglePreferred(this)">
                         <img class="selectionimage" src="elements/blue.png">
@@ -92,26 +100,13 @@
                         <img class="selectionimage" src="elements/yellow.png">
                     </button>
                 </div>
-                <div id="ingredients-options-section" style="display: none;">
-                    <div class="sidetitle">
-                        <p class='MergePro' style="font-weight: bold; color: white; text-align: center;">Ingredients:</p>
-                    </div>
-                    <div class="sideoptions">
-                        <img src="elements/cherry.png" style="max-width: 30px; max-height: 30px;">
-                        <label for="cherries" class='DroidSans' style="margin: 10px; display: block; color: white; text-align: center;">Cherries Required:</label>
-                        <input style="width: 50px; text-align: center;" placeholder="0" type="number" name="cherries" id="cherries">
-                        <div class="break"></div>
-                        <img src="elements/hazelnut.png" style="max-width: 30px; max-height: 30px;">
-                        <label for="hazelnuts" class='DroidSans' style="margin: 10px; display: block; color: white; text-align: center;">Hazelnuts Required:</label>
-                        <input style="width: 50px; text-align: center;" placeholder="0" type="number" name="hazelnuts" id="hazelnuts">
-                    </div>
-                </div>
                 <div id="requirements-options-section" style="display: none;">
                     <div class="sidetitle">
                         <p class='MergePro' style="font-weight: bold; color: white; text-align: center;">Requirements:</p>
                     </div>
-                    <div class="sidetitle">
-                        <button style="margin-right: auto; margin-left: auto; display: block;" onclick="addRequirement()">Add Requirement</button>
+                    <div class="sidetitle" style="display: flex;">
+                        <button style="margin-right: auto; margin-left: auto; display: block; height: fit-content;" onclick="addRequirement()" id="addorder">Add Order</button>
+                        <button style="margin-right: auto; margin-left: auto; display: block; height: fit-content;" onclick="addRequirement(true)" id="addingredient">Add Ingredient</button>
                     </div>
                     <div style="min-height: 40px; display: none;" id="requirementwarning">
                         <p class='DroidSans' style="font-weight: bold; color: red; text-align: center;">You can only have 3 requirements at a time.</p>
@@ -389,7 +384,7 @@
             </div>
 
             <div class="vertical-center" width="100px">
-                <table id="level" cellspacing="0" class=""></table>
+                <table id="level" cellspacing="0"></table>
             </div>
         </div>
 
@@ -398,6 +393,18 @@
                 <button onclick="document.getElementById('exportmenu').style.display = 'none'" style="position: absolute; right: 20; top: 20; border-radius: 10px; background-color: rgb(174, 174, 174); width: 30px; height: 30px">X</button>
                 <label for="exportfield" class='MergePro' style="margin: 0; width: 50%; height: 20px; border-radius: 10px; background-color: #353535; padding:0; display: block; color: white; text-align: center;">Exported Data:</label>
                 <textarea id="exportfield" name="exportfield" style="background-color: #464646; border: 2px solid #353535; width: 90%; height: 70%; resize: none; color: white;" readonly></textarea>
+            </div>
+        </div>
+        <div id="importmenu" style="display: none;">
+            <div class="popup" style="width: 30%; left: 35%;">
+                <button onclick="document.getElementById('importmenu').style.display = 'none'" style="position: absolute; right: 20; top: 20; border-radius: 10px; background-color: rgb(174, 174, 174); width: 30px; height: 30px">X</button>
+                <label for="importfield" class='MergePro' style="margin: 0; width: 50%; height: 20px; border-radius: 10px; background-color: #353535; padding:0; display: block; color: white; text-align: center;">Type In Level Code:</label>
+                <div class="break"></div>
+                <textarea id="importfield" name="importfield" style="background-color: #464646; border: 2px solid #353535; width: 70%; height: 70%; resize: none; color: white;"></textarea>
+                <div class="break"></div>
+                <button onclick="importLevelUI()" style="border-radius: 5px; background-color: rgb(174, 174, 174); width: 30%; font-size: 1.1em;">Import Level</button>
+                <div class="break"></div>
+                <p class="MergePro" id="importerror" style="color: red; display: none; width: fit-content; height: fit-content;">Error: bruh</p>
             </div>
         </div>
     </body>
