Added Score Targets

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
                         <img class="selectionimage" src="elements/yellow.png">
                     </button>
                 </div>
+                <div class="sideoptions">
+                    <p class='DroidSans break' style="margin: 10px; display: block; color: white; text-align: center;">Score Targets:</p>
+                    <img src="ui/hud/hud_scoreStar_red.png" style="max-width: 30px; max-height: 30px;"> 
+                    <p class="DroidSans" style="margin: 10px; display: block; color: white; text-align: center;">Star 1:</p> 
+                    <input style="width: fit-content; text-align: center;" placeholder="1000" type="number" id="star1">
+                    <div class="break"></div> 
+                    <img src="ui/hud/hud_scoreStar_green.png" style="max-width: 30px; max-height: 30px;"> 
+                    <p class="DroidSans" style="margin: 10px; display: block; color: white; text-align: center;">Star 2:</p> 
+                    <input style="width: fit-content; text-align: center;" placeholder="2000" type="number" id="star2">
+                    <div class="break"></div> 
+                    <img src="ui/hud/hud_scoreStar_yellow.png" style="max-width: 30px; max-height: 30px;"> 
+                    <p class="DroidSans" style="margin: 10px; display: block; color: white; text-align: center;">Star 3:</p> 
+                    <input style="width: fit-content; text-align: center;" placeholder="3000" type="number" id="star3">
+                </div>
                 <div id="requirements-options-section" style="display: none;">
                     <div class="sidetitle">
                         <p class='MergePro' style="font-weight: bold; color: white; text-align: center;">Requirements:</p>
