--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                     </button>
                 </div>
                 <div class="sideoptions">
+                    <label for="moves" class='DroidSans' style="margin: 10px; display: block; color: white; text-align: center;">Disable Starting Boosters:</label>
+                    <input style="text-align: center;" type="checkbox" name="disablebooster" id="disablebooster">
+                </div>
+                <div class="sideoptions">
                     <p class='DroidSans break' style="margin: 10px; display: block; color: white; text-align: center;">Score Targets:</p>
                     <img src="ui/hud/hud_scoreStar_red.png" style="max-width: 30px; max-height: 30px;"> 
                     <p class="DroidSans" style="margin: 10px; display: block; color: white; text-align: center;">Star 1:</p> 
