Fixed Color Prefs Default Bug

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <button value="4" class="preferred preferredselected" onclick="togglePreferred(this)">
                         <img class="selectionimage" src="elements/red.png">
                     </button>
-                    <button value="5" class="preferred preferredselected" onclick="togglePreferred(this)">
+                    <button value="5" class="preferred" onclick="togglePreferred(this)">
                         <img class="selectionimage" src="elements/yellow.png">
                     </button>
                 </div>
