More Sugar Coatable Thing + Partial Cannon Support

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                     </button>
                     <div class="dropped" id="spawning" style="display:none">
                         <div class="selectelement" element="candy_entrance" gamelayer="candy_entrance"></div>
+                        <!-- <div class="selectelement" element="candy_cannon" gamelayer="candy_cannon"></div> -->
                     </div>
 
                     <button class="dropdown" onclick="toggleDropdown(this)" associd="ingredients">
@@ -401,7 +402,7 @@
                 </div>
             </div>
 
-            <div class="vertical-center" width="100px">
+            <div class="vertical-center" width="100px" style="top:56%">
                 <table id="level" cellspacing="0"></table>
             </div>
         </div>
