--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
                         <div class="selectelement" element="shell_3" gamelayer="normal"></div>
                         <div class="selectelement" element="jelly_jar_1" gamelayer="normal"></div>
                         <div class="selectelement" element="jelly_jar_2" gamelayer="normal"></div>
-                    </div>
+                        <div class="selectelement" element="jelly_jar_2" gamelayer="normal"></div>
+                        <div class="selectelement" element="gumball" gamelayer="normal></div>
 
                     <button class="dropdown" onclick="toggleDropdown(this)" associd="locks">
                         <div style="display: flex; justify-content: space-between;">
