--- a/index.html
+++ b/index.html
@@ -415,8 +415,32 @@
                         <button onclick="updateSelection(this, 'destructible_wall_1_right', 'wallright')" class="">
                             <img class="selectionimage" src="elements/destructible_wall_1_right_ui.png">
                         </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_2_down', 'walldown')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_2_down_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_2_up', 'wallup')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_2_up_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_2_left', 'wallleft')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_2_left_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_2_right', 'wallright')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_2_right_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_3_down', 'walldown')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_3_down_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_3_up', 'wallup')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_3_up_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_3_left', 'wallleft')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_3_left_ui.png">
+                        </button>
+                        <button onclick="updateSelection(this, 'destructible_wall_3_right', 'wallright')" class="">
+                            <img class="selectionimage" src="elements/destructible_wall_3_right_ui.png">
+                        </button>
                         
-
+                        
                         <button onclick="updateSelection(this, 'licorice_wall_down', 'walldown')" class="">
                             <img class="selectionimage" src="elements/licorice_wall_down_ui.png">
                         </button>
